[package]
name = "wgpu-native"
version = "0.14.1"
authors = [
	"Dzmitry Malyshau <kvark@mozilla.com>",
	"Joshua Groves <josh@joshgroves.com>",
	"Noah Charlton <ncharlton002@gmail.com>",
	"Almar Klein <almar@almarklein.org>",
]
edition = "2021"
description = "WebGPU native implementation on gfx-hal"
homepage = "https://github.com/gfx-rs/wgpu-native"
repository = "https://github.com/gfx-rs/wgpu-native"
keywords = ["graphics"]
license = "MIT OR Apache-2.0"

[lib]
crate-type = ["lib", "cdylib", "staticlib"]

[features]
default = []
angle = ["wgc/angle"]

[target.'cfg(not(target_arch = "wasm32"))'.dependencies.wgc]
package = "wgpu-core"
git = "https://github.com/wozeparrot/wgpu/"
rev = "fb1b251e8bb7914d297d03d92518235adabb1cd4"
features = ["raw-window-handle", "trace", "wgsl"]
version = "0.15.0"

[target.'cfg(target_arch = "wasm32")'.dependencies.wgc]
package = "wgpu-core"
git = "https://github.com/wozeparrot/wgpu/"
rev = "fb1b251e8bb7914d297d03d92518235adabb1cd4"
features = ["raw-window-handle", "trace", "wgsl", "id32"]
version = "0.15.0"

[target.'cfg(target_arch = "wasm32")'.dependencies]
web-sys = "0.3.60"
wasm-bindgen = "0.2.83"

[dependencies.wgt]
package = "wgpu-types"
git = "https://github.com/wozeparrot/wgpu/"
rev = "fb1b251e8bb7914d297d03d92518235adabb1cd4"
version = "0.15.0"

[dependencies.naga]
git = "https://github.com/gfx-rs/naga"
rev = "e7fc8e6"
version = "0.10"
features = ["spv-in", "glsl-in"]

[dependencies]
lazy_static = "1.4"
raw-window-handle = "0.5"
paste = "1.0"
log = "0.4"
thiserror = "1"

[build-dependencies]
bindgen = "0.63.0"
cfg_aliases = "0.1"

[workspace]
resolver = "2"
members = [
	"examples/helper"
]
