[package]
name = "wgpu-native"
version = "0.0.0"
authors = [
	"Dzmitry Malyshau <kvark@mozilla.com>",
	"Joshua Groves <josh@joshgroves.com>",
	"Noah Charlton <ncharlton002@gmail.com>",
	"Almar Klein <almar@almarklein.org>",
]
edition = "2021"
description = "WebGPU native implementation on gfx-hal"
homepage = "https://github.com/wozeparrot/wgpu-native"
repository = "https://github.com/wozeparrot/wgpu-native"
keywords = ["graphics"]
license = "MIT OR Apache-2.0"

[lib]
crate-type = ["lib", "cdylib", "staticlib"]

[features]
default = ["wgsl", "spirv", "glsl", "trace"]

angle = ["wgc/angle"]
vulkan-portability = ["wgc/vulkan"]
wgsl = ["wgc/wgsl"]
spirv = ["naga/spv-in"]
glsl = ["naga/glsl-in"]
trace = ["wgc/trace"]

[dependencies.wgc]
package = "wgpu-core"
git = "https://github.com/wozeparrot/wgpu"
rev = "ee67cdbd4691772647a8ee6a42be933d78e0119f"
version = "0.15.0"
features = ["raw-window-handle", "gles"]

[target.'cfg(any(target_os = "macos", target_os = "ios"))'.dependencies.wgc]
package = "wgpu-core"
git = "https://github.com/wozeparrot/wgpu"
rev = "ee67cdbd4691772647a8ee6a42be933d78e0119f"
version = "0.15.0"
features = ["metal"]

[target.'cfg(windows)'.dependencies.wgc]
package = "wgpu-core"
git = "https://github.com/wozeparrot/wgpu"
rev = "ee67cdbd4691772647a8ee6a42be933d78e0119f"
version = "0.15.0"
features = ["dx11", "dx12"]

[target.'cfg(any(windows, all(unix, not(target_arch = "emscripten"), not(target_os = "ios"), not(target_os = "macos"))))'.dependencies.wgc]
package = "wgpu-core"
git = "https://github.com/wozeparrot/wgpu"
rev = "ee67cdbd4691772647a8ee6a42be933d78e0119f"
version = "0.15.0"
features = ["vulkan"]

[target.'cfg(target_arch = "wasm32")'.dependencies.wgc]
package = "wgpu-core"
git = "https://github.com/wozeparrot/wgpu"
rev = "ee67cdbd4691772647a8ee6a42be933d78e0119f"
version = "0.15.0"
features = ["id32"]

[dependencies.wgt]
package = "wgpu-types"
git = "https://github.com/wozeparrot/wgpu"
rev = "ee67cdbd4691772647a8ee6a42be933d78e0119f"
version = "0.15.0"

[dependencies.naga]
git = "https://github.com/gfx-rs/naga"
rev = "f0edae8"
version = "0.11"

[dependencies]
lazy_static = "1.4"
raw-window-handle = "0.5"
paste = "1.0"
log = "0.4"
thiserror = "1"

[target.'cfg(target_arch = "wasm32")'.dependencies]
web-sys = "0.3.61"
wasm-bindgen = "0.2.84"

[build-dependencies]
bindgen = "0.63"

[workspace]
resolver = "2"
members = [
	"examples/helper"
]
